--- a/common/index.less
+++ b/common/index.less
@@ -1,5 +1,7 @@
 @import './variable.less';
 @import './private.less';
+@import '../src/pages/myShop/less/login';
+
 body,html{
     margin: 0;
     padding: 0
@@ -10,8 +12,10 @@ body,html{
     width: 100%;
     height: 100%;
     font-size: 14px;/*px*/
+    font-family:'PingFang-SC-Medium';
 }
 
 button {
     outline:0;
 }
+
