--- a/common/index.less
+++ b/common/index.less
@@ -19,3 +19,20 @@ button {
     outline:0;
 }
 
+// 共同的样式
+.navbar {
+    width: 100%;
+    height: 8px;
+    background-color: #F1F1FB;
+}
+// 头部导航
+.van-icon-arrow-left:before {
+    color: #333333;
+}
+.van-nav-bar__title{
+    color: #333;
+    font-size: 17px;
+}
+[class*=van-hairline]::after {
+    border: 1px solid #E7E7E7;/*no*/
+}
