--- a/common/index.less
+++ b/common/index.less
@@ -1,7 +1,7 @@
 @import './variable.less';
 @import './private.less';
 @import '../src/pages/myShop/less/login';
-
+@import '../src/pages/shareShop/less/index';
 body,html{
     margin: 0;
     padding: 0
