--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -22,3 +22,14 @@
     padding-top: 0px !important;
   }
 }
+// shopregister 页面
+.center_search {
+  .van-field__left-icon {
+    position: absolute;
+    right: 10px;
+    z-index: 999999
+  }
+  .van-icon {
+    display: none;
+  }
+}
