代理产品相关产品

--- a/common/index.less
+++ b/common/index.less
@@ -13,9 +13,11 @@ body,html{
     height: 100%;
     font-size: 14px;/*px*/
     font-family:'PingFang-SC-Medium';
-    padding-top: 40px;
+    
 }
-
+.pddingTop{
+    padding-top: 45px;
+}
 button {
     outline:0;
 }
