微店招牌完成

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -88,3 +88,27 @@
     }
   }
 }
+
+// 微店招牌
+.shopsign_common{
+  .van-radio__icon--checked .van-icon{
+    border-radius: 0px;
+    width: 49px; 
+    height: 49px;
+    color: transparent;
+    background: url('../imgs/xuanzhong.png') no-repeat;
+    background-size: 100%;
+  }
+  .van-icon-success:before {
+    position: absolute;
+    z-index: 9999;
+    right: 0px;
+    font-size: 20px;
+  }
+  .van-radio__icon--round .van-icon{
+    border: none;
+  }
+  .van-radio__icon{
+    height: 49px;
+  }
+}
