信用卡完成

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -112,3 +112,17 @@
     height: 49px;
   }
 }
+
+// 信用卡
+.productCard_common{
+  .van-progress__pivot {
+    display: none;
+  }
+  .van-progress {
+    left: 88px;
+    bottom: 12px;
+    width: 80%;
+    background-color: #DFDFDF;
+    border-radius:3px;
+  }
+}
