下拉刷新完成

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -36,6 +36,9 @@
 
 // 代理产品页面
 .agentproduct_common {
+  .van-pull-refresh{
+    overflow: visible;
+  }
   .van-tab:nth-child(3){
     span {
       border-left: 1px solid #E7E7E7;
