我的客户完成

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -23,6 +23,22 @@
   }
 }
 // shopregister 页面
+.shopregister_common {
+  .van-hairline--top-bottom::after {
+    border: none;
+  }
+  .van-search--show-action {
+    border-bottom: 1px solid #E7E7E7;/*no*/ 
+  }
+  .van-tab span {
+    font-size:15px;
+    color: #333;
+  }
+  .van-tabs__line{
+    background-color: #4597fb;
+    border-radius:2px;
+  }
+}
 .center_search {
   .van-field__left-icon {
     position: absolute;
