--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -112,3 +112,10 @@
     height: 49px;
   }
 }
+//佣金提现
+.navbarrighttext{
+  .van-nav-bar__right .van-nav-bar__text{
+    color:#333333!important;
+    font-size:14px;
+  }
+}
