自营产品和添加自营产品

--- a/common/index.less
+++ b/common/index.less
@@ -4,7 +4,7 @@
 @import '../src/pages/shareShop/less/index';
 body,html{
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 #app{
     position: relative;
@@ -13,7 +13,6 @@ body,html{
     height: 100%;
     font-size: 14px;/*px*/
     font-family:'PingFang-SC-Medium';
-    
 }
 .pddingTop{
     padding-top: 45px;
