--- a/common/index.less
+++ b/common/index.less
@@ -2,6 +2,8 @@
 @import './private.less';
 @import '../src/pages/myShop/less/myshop';
 @import '../src/pages/shareShop/less/index';
+// @import '/node_modules/vant/lib/index.css';
+
 body,html{
     margin: 0;
     padding: 0;
