--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -152,3 +152,79 @@
     border-radius:3px;
   }
 }
+
+// 我的订单
+.mshopapply_common {
+  .van-popup--top {
+    left: 50%;
+  }
+  .van-dropdown-menu__title{
+    line-height: 19px;
+  }
+  .van-dropdown-menu__item,.van-dropdown-menu{
+    height: 30px;
+  }
+  .van-pull-refresh{
+    overflow: visible;
+  }
+  .van-tab:nth-child(3){
+    span {
+      border-left: 1px solid #E7E7E7;
+      border-right: 1px solid #E7E7E7;
+      display:inline;
+      padding: 0px 30px;
+    }
+  }
+  .van-hairline--top-bottom::after {
+    border: none;
+  }
+  .van-tabs__line {
+    background-color: #4597FB;
+    border-radius:2px;
+  }
+  .van_popup_text {
+    width: 279px;
+    padding: 38px 20px 20px 13px;
+    border-radius:5px;
+    .product_message {
+      color: #333333;
+      font-size:15px;
+      padding: 0px 24px;
+      line-height: 25px;
+    }
+    .product_radio {
+      padding-left: 21px;
+      font-size: 13px;
+      color: #999;
+    }
+    .product_button {
+      button {
+        width: 118px;
+        height: 40px;
+        color: #FFFFFF;
+        font-size:17px;
+        border-radius: 20px;
+        line-height: 40px;
+      }
+      :nth-child(1){
+        background-color: #fff;
+        color: #4597FB;
+        border: 1px solid #4597FB;/*no*/
+        margin-right: 10px;
+      }
+      :nth-child(2){
+        background-color: #4597FB;
+        
+      }
+    }
+  }
+}
+// 下拉刷新
+.xilashuaxin {
+  height: 100%;
+  .van-loading.van-loading--circular{
+    text-align: center;
+    width: 375px;
+    line-height: 35px;
+  }
+}
