电话短信功能完成

--- a/common/index.less
+++ b/common/index.less
@@ -33,6 +33,7 @@ button {
 .van-icon-arrow-left:before {
     z-index: 9999;
     color: #333333;
+    font-size: 22px;
 }
 .van-nav-bar__title{
     color: #333;
