--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -220,7 +220,7 @@
   }
 }
 // 下拉刷新
-.xilashuaxin {
+.xialashuaxin {
   height: 100%;
   .van-loading.van-loading--circular{
     text-align: center;
