--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -24,6 +24,35 @@
 }
 // shopregister 页面
 .shopregister_common {
+    // 消除动画
+  .van-popup--right{
+    transform: none;
+    top: 0px;
+    // transform: translate3d(0,-50%,0);
+  }
+  
+  .rightShow_two {
+    padding-bottom: 10px;
+    ul{
+      li {
+        display: inline-block;
+        width: 88px;
+        height: 32px;
+        line-height: 32px;
+        background-color: #f4f4f4;
+        font-size: 13px;
+        color: #333;
+        text-align: center;
+        border-radius: 2px;
+        margin: 0px 10px 10px 0px;
+        border: none;
+      }
+      .active{
+        background-color: #4597FB;
+        color: #FFFFFF;
+      }
+    }
+  }
   .van-hairline--top-bottom::after {
     border: none;
   }
@@ -228,3 +257,4 @@
     line-height: 35px;
   }
 }
+
