--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -58,6 +58,14 @@
 }
 //进度条
 .applicamain{
+    [class*=van-hairline]::after{
+        border: none;
+        width: 25%;
+    }
+    .van-step--horizontal{
+        width: 200px;
+        background-color: red;
+    }
     .van-icon-checked:before{
         display: none !important;
         // content:'';
