--- a/common/index.less
+++ b/common/index.less
@@ -58,3 +58,8 @@ button {
 .white{
     background-color: white;
 }
+
+// 加载进度样式
+.xialashuaxin .van-loading.van-loading--circular{
+    width: 360px ;
+}
