--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -56,6 +56,10 @@
 .shophome [class*=van-hairline]::after {
     border:none !important;
 }
+.shophome .van-tabbar{
+    background:#f1f1fb;
+    padding-top:25px;
+}
 // 有钱花公共样式
 .appliationlocnmain{
     background: #f1f1fb;
