信贷工具完成

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -150,6 +150,47 @@
     }
   }
 }
+.productdetails_common{
+  .van-popup{
+    background-color: #fff !important;
+  }
+  .van_popup_text {
+    width: 279px;
+    padding: 38px 20px 20px 13px;
+    border-radius:5px;
+    .product_message {
+      color: #333333;
+      font-size:15px;
+      padding: 0px 24px;
+      line-height: 25px;
+    }
+    .product_radio {
+      padding-left: 21px;
+      font-size: 13px;
+      color: #999;
+    }
+    .product_button {
+      button {
+        width: 118px;
+        height: 40px;
+        color: #FFFFFF;
+        font-size:17px;
+        border-radius: 20px;
+        line-height: 40px;
+      }
+      :nth-child(1){
+        background-color: #fff;
+        color: #4597FB;
+        border: 1px solid #4597FB;/*no*/
+        margin-right: 10px;
+      }
+      :nth-child(2){
+        background-color: #4597FB;
+        
+      }
+    }
+  }
+}
 
 // 微店招牌
 .shopsign_common{
