--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -142,9 +142,31 @@
 .optionstyle{
     padding:15px;
     overflow: hidden;
-    .chooser-list{
-        margin-right: -22px;
+    ul{
+        margin-right:-23px;
     }
+    li{
+        width: 100px;
+        margin-right: 22px;
+        height: 40px;
+        margin-bottom: 10px;
+        font-size:13px;
+        line-height: 40px;
+        border-radius: 2px;
+        display: inline-block;
+        color: #333333;
+        text-align: center;
+        background: #F4F4F4;
+    }
+    li.checked{
+        background-color:#0CF; color:#fff; 
+        border:1px #fff solid;
+    }
+   
+    // .chooser-list{
+    //     margin-right: -22px;
+    // }
+
 }
 .optionstyles{
     padding:15px;
