接口调试完成

--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -171,11 +171,31 @@
 .optionstyles{
     padding:15px;
     overflow: hidden;
-    .chooser-list{
-        margin-right: -22px; 
-        li{
-            width:161px !important;
-        }
+    // .chooser-list{
+    //     margin-right: -22px; 
+    //     li{
+    //         width:161px !important;
+    //     }
+    // }
+    ul{
+        margin-right:-23px;
+    }
+    li{
+        width: 160px;
+        margin-right: 22px;
+        height: 40px;
+        margin-bottom: 10px;
+        font-size:13px;
+        line-height: 40px;
+        border-radius: 2px;
+        display: inline-block;
+        color: #333333;
+        text-align: center;
+        background: #F4F4F4;
+    }
+    li.checked{
+        background-color:#0CF; color:#fff; 
+        border:1px #fff solid;
     }
 }
 .applyloanhouse{
