--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -316,3 +316,8 @@
   height: 456px;
   background-color: #f1f1fb;
 }
+.mwithdrawal_common {
+  .van-tabs__line{
+    background-color: #4597FB;
+  }
+}
