绑定银行卡+提现

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -321,3 +321,19 @@
     background-color: #4597FB;
   }
 }
+// 提现
+.commissmain{
+  .van-number-keyboard{
+    z-index: 2000 !important;
+  }
+  .van-overlay{
+    z-index: 1000 !important;
+  }
+  .van-password-input__security li{
+    width: 40px;
+    height: 40px;
+  }
+  .van-password-input__security{
+    height: 40px;
+  }
+}
