--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -64,6 +64,7 @@
 .appliationlocnmain{
     background: #f1f1fb;
     padding-bottom:50px;
+    position: relative;
 }
 //温馨提示
 .applireminder{
@@ -137,7 +138,15 @@
     }
    
 }
-
+.appliationlocnmain .van-button, .van-button--default, .van-button--large, .van-dialog__confirm .van-dialog__confirm:active{
+    color:#ffffff;
+    background:#4597FB;
+    width:250px;
+    margin:0 35px 15px;
+    border-radius: 20px;
+    height:40px;
+    line-height: 40px;
+}
 //组件样式
 .optionstyle{
     padding:15px;
