--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -337,3 +337,18 @@
     height: 40px;
   }
 }
+
+.commissdetailmain {
+  .van-dropdown-menu__item{
+    text-align: left;
+    -webkit-justify-content:left;
+    padding-left: 20px;
+  }
+  [class*=van-hairline]::after{
+    border: none;
+    border-top: 1px solid #F1F1FB;/*no*/
+  }
+  .van-popup--top {
+    left: 50%;
+  }
+}
