--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -26,6 +26,10 @@
     }
     
 }
+//弹出框样式
+.shoppagemain .dialog [class*=van-hairline]::after{
+    border:none;
+}
 //上拉加载
 .van-loading--circular{
     height:50px !important;
@@ -45,6 +49,8 @@
   .dropdown .van-dropdown-menu__title{
     color:#333333;
     font-size:14px;
+    width:100%;
+    text-align: right
 }
 .dropdowns{
     margin-right: 15px;
