代理产品优化完成

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -150,10 +150,11 @@
     }
   }
 }
+.van_popup_text.van-popup{
+  background-color: #fff !important;
+}
 .productdetails_common{
-  .van-popup{
-    background-color: #fff !important;
-  }
+  
   .van_popup_text {
     width: 279px;
     padding: 38px 20px 20px 13px;
