--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -22,6 +22,9 @@
     padding-top: 0px !important;
   }
 }
+.van-button::before {
+  border-color: #fff !important;
+}
 // shopregister 页面
 .shopregister_common {
     // 消除动画
