--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -24,6 +24,7 @@
 }
 .van-button::before {
   border-color: #fff !important;
+  border: none !important;
 }
 // shopregister 页面
 .shopregister_common {
