--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -22,11 +22,13 @@
     padding-top: 0px !important;
   }
 }
-.van-button::before {
-  border-color: #fff !important;
-  border: none !important;
-}
+
 // shopregister 页面
+
+  [class*=van-hairline]::after {
+    border: none !important;
+  }
+
 .shopregister_common {
     // 消除动画
   .van-popup--right{
