--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -30,6 +30,9 @@
   }
 
 .shopregister_common {
+  input[type="checkbox"]{
+    background-color: transparent;
+  }
     // 消除动画
   .van-popup--right{
     transform: none;
