--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -30,7 +30,7 @@
   }
 
 .shopregister_common {
-  input[type="checkbox"]{
+  input[type="checkbox"][data-v-72582d12]{
     background-color: transparent;
   }
     // 消除动画
