--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -30,8 +30,9 @@
   }
 
 .shopregister_common {
-  input[type="checkbox"][data-v-72582d12]{
-    background-color: transparent;
+  #quan{
+    background-color: transparent !important;
+    // z-index: -1;
   }
     // 消除动画
   .van-popup--right{
