--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -52,6 +52,11 @@
     width:100%;
     text-align: right
 }
+.loanlisttop .dropdown .van-dropdown-menu__title{
+    text-align: left;
+    padding-left:15px;
+
+}
 .dropdowns{
     margin-right: 15px;
     .van-dropdown-menu__title{
@@ -219,7 +224,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height:40px;
+        height:50px;
         border-bottom: 1px solid #E7E7E7 /*no*/;
         font-size:14px;
         color:#333333;
