--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -350,6 +350,7 @@
   .van-password-input__security li{
     width: 40px;
     height: 40px;
+    border: 1px solid #ccc;/*no*/
   }
   .van-password-input__security{
     height: 40px;
