--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -188,6 +188,9 @@
     // }
 
 }
+.srelate_menu .van-tabs--card > .van-tabs__wrap .van-tabs__nav--card .van-tab:last-child{
+    border-right:none;
+}
 .optionstyles{
     padding:15px;
     overflow: hidden;
@@ -241,4 +244,11 @@
         border:none;
     }
     
+}
+.shophome{
+    .van-hairline--top-bottom{
+        background:#ffffff !important;
+        height:70px;
+        border-top:1px solid #EFEFEF;
+    }
 }
