代理产品样式加下拉刷新 相关产品

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -124,7 +124,7 @@
     border-radius:2px;
   }
   .van_popup_text {
-    width: 279px;
+    width: 289px;
     padding: 38px 20px 20px 13px;
     border-radius:5px;
     .product_message {
@@ -137,6 +137,7 @@
       padding-left: 21px;
       font-size: 13px;
       color: #999;
+      margin: 20px 0px;
     }
     .product_button {
       button {
@@ -151,7 +152,7 @@
         background-color: #fff;
         color: #4597FB;
         border: 1px solid #4597FB;/*no*/
-        margin-right: 10px;
+        margin-right: 20px;
       }
       :nth-child(2){
         background-color: #4597FB;
@@ -164,21 +165,21 @@
   background-color: #fff !important;
 }
 .productdetails_common{
-  
   .van_popup_text {
-    width: 279px;
-    padding: 38px 20px 20px 13px;
-    border-radius:5px;
+    width: 289px;
+    padding: 38px 20px 20px 14px;
+    border-radius:5px !important;
     .product_message {
       color: #333333;
       font-size:15px;
       padding: 0px 24px;
-      line-height: 25px;
+      line-height: 30px;
     }
     .product_radio {
       padding-left: 21px;
       font-size: 13px;
       color: #999;
+      margin: 20px 0px !important;
     }
     .product_button {
       button {
@@ -193,7 +194,7 @@
         background-color: #fff;
         color: #4597FB;
         border: 1px solid #4597FB;/*no*/
-        margin-right: 10px;
+        margin-right: 18px;
       }
       :nth-child(2){
         background-color: #4597FB;
@@ -294,6 +295,7 @@
       padding-left: 21px;
       font-size: 13px;
       color: #999;
+      margin-top: 20px;
     }
     .product_button {
       button {
