代理产品信用卡优化

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -237,21 +237,6 @@
 .detailsmain .van-pull-refresh {
   overflow: visible !important;
 }
-
-// 信用卡
-.productCard_common{
-  .van-progress {
-      left: 108px;
-      bottom: 12px;
-      width: 80%;
-      background-color: #DFDFDF;
-      border-radius:3px;
-  }
-  .van-progress__pivot {
-    display: none;
-  }
-}
-
 // 我的订单
 .mshopapply_common {
   .van-popup--top {
@@ -386,4 +371,13 @@
 
 .haha .van-loading.van-loading--circular {
   display: none !important;
+}
+
+// 海报
+.haibaoIMg {
+  img{
+    width: 289px;
+    // height: 460px;
+    border-radius: 5px;
+  }
 }
