--- a/common/index.less
+++ b/common/index.less
@@ -18,10 +18,11 @@ body,html{
 }
 .pddingTop{
     padding-top: 45px;
-    border-bottom:1px solid #E7E7E7;
-    >header{
-        border-bottom:1px solid #E7E7E7;
-    }
+    // border-bottom:1px solid #E7E7E7;
+   
+}
+.pddingTop .van-nav-bar{
+    border-bottom:1px solid #efefef;
 }
 button {
     outline:0;
