微店订单 上拉加载优化

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -239,6 +239,11 @@
 }
 // 我的订单
 .mshopapply_common {
+  .van-tabs__wrap {
+    position: fixed;
+    top: 44px;
+    background-color: red;
+  }
   .van-popup--top {
     left: 50%;
   }
