--- a/common/index.less
+++ b/common/index.less
@@ -18,7 +18,7 @@ body,html{
 }
 .pddingTop{
     padding-top: 45px;
-    // border-bottom:1px solid #E7E7E7;
+    // border-bottom:1px solid #efefef;
    
 }
 .pddingTop .van-nav-bar{
@@ -55,7 +55,7 @@ button {
     line-height: 40px;
 }
 [class*=van-hairline]::after {
-    border: 1px solid #E7E7E7;/*no*/
+    border: 1px solid #efefef;/*no*/
 }
 
 // button 样式
