--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -68,7 +68,7 @@
     border: none;
   }
   .van-search--show-action {
-    border-bottom: 1px solid #E7E7E7;/*no*/ 
+    border-bottom: 1px solid #efefef;/*no*/ 
   }
   .van-tab span {
     font-size:15px;
@@ -111,8 +111,8 @@
   }
   .van-tab:nth-child(3){
     span {
-      border-left: 1px solid #E7E7E7;
-      border-right: 1px solid #E7E7E7;
+      border-left: 1px solid #efefef;
+      border-right: 1px solid #efefef;
       display:inline;
       padding: 0px 40px;
     }
@@ -259,8 +259,8 @@
   }
   .van-tab:nth-child(3){
     span {
-      border-left: 1px solid #E7E7E7;
-      border-right: 1px solid #E7E7E7;
+      border-left: 1px solid #efefef;
+      border-right: 1px solid #efefef;
       display:inline;
       padding: 0px 30px;
     }
