自营产品 详情样式

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -387,3 +387,17 @@
     border-radius: 5px;
   }
 }
+
+// 编辑店铺
+.delect {
+  .van-dialog__header {
+    border-bottom: 1px solid #efefef; /*no*/ 
+    padding: 15px 0px;
+    font-size: 18px;
+  }
+  .van-dialog__message{
+    font-size: 13px;
+    color: #333;
+    padding-top: 20px;
+  }
+}
