--- a/common/index.less
+++ b/common/index.less
@@ -39,6 +39,7 @@ button {
     z-index: 9999;
     color: #333333;
     font-size: 22px;
+    margin-top: 2px;
 }
 .van-nav-bar__title{
     color: #333;
