--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -122,7 +122,8 @@
   }
   .van-tabs__line {
     background-color: #4597FB;
-    border-radius:2px;
+    border-radius:2px;  
+    height: 4px;
   }
   .van_popup_text {
     width: 289px;
