分享引导页

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -402,3 +402,15 @@
     padding-top: 20px;
   }
 }
+
+// 分享引导页
+.yindaoshow{
+  background-color: transparent;
+  width: 279px;
+  height: 270px;
+  top: 25%;
+  img{
+    width: 279px;
+    height: 270px;
+  }
+}
