样式的优化

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -31,6 +31,9 @@
   }
 
 .shopregister_common {
+  .van-icon-search:before {
+    display: none !important;
+  }
   #quan{
     background-color: transparent !important;
     // z-index: -1;
