我的订单 样式样式

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -256,10 +256,13 @@
     line-height: 19px;
   }
   .van-dropdown-menu__item,.van-dropdown-menu{
-    height: 30px;
+    height: 33px;
   }
   .van-pull-refresh{
     overflow: visible;
+  }
+  .van-tab {
+    line-height: 42px;
   }
   .van-tab:nth-child(3){
     span {
@@ -274,7 +277,8 @@
   }
   .van-tabs__line {
     background-color: #4597FB;
-    border-radius:2px;
+    border-radius:4px;
+    bottom: 20px;
   }
   .van_popup_text {
     width: 279px;
@@ -309,7 +313,6 @@
       }
       :nth-child(2){
         background-color: #4597FB;
-        
       }
     }
   }
