--- a/common/index.less
+++ b/common/index.less
@@ -18,11 +18,11 @@ body,html{
 }
 .pddingTop{
     padding-top: 45px;
-    // border-bottom:1px solid #efefef;
+    // border-bottom:1px solid #f2f2f2;
    
 }
 .pddingTop .van-nav-bar{
-    border-bottom:1px solid #efefef;
+    border-bottom:1px solid #f2f2f2;
 }
 button {
     outline:0;
@@ -56,7 +56,7 @@ button {
     line-height: 40px;
 }
 [class*=van-hairline]::after {
-    border: 1px solid #efefef;/*no*/
+    border: 1px solid #f2f2f2;/*no*/
 }
 
 // button 样式
