--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -71,7 +71,7 @@
     border: none;
   }
   .van-search--show-action {
-    border-bottom: 1px solid #efefef;/*no*/ 
+    border-bottom: 1px solid #f2f2f2;/*no*/ 
   }
   .van-tab span {
     font-size:15px;
@@ -114,8 +114,8 @@
   }
   .van-tab:nth-child(3){
     span {
-      border-left: 1px solid #efefef;
-      border-right: 1px solid #efefef;
+      border-left: 1px solid #f2f2f2;
+      border-right: 1px solid #f2f2f2;
       display:inline;
       padding: 0px 40px;
     }
@@ -262,12 +262,12 @@
     overflow: visible;
   }
   .van-tab {
-    line-height: 42px;
+    line-height: 44 px;
   }
   .van-tab:nth-child(3){
     span {
-      border-left: 1px solid #efefef;
-      border-right: 1px solid #efefef;
+      border-left: 1px solid #f2f2f2;
+      border-right: 1px solid #f2f2f2;
       display:inline;
       padding: 0px 30px;
     }
@@ -328,6 +328,10 @@
 
 .height{
   height: 456px;
+  background-color: #f1f1fb;
+}
+.height1{
+  height: 100%;
   background-color: #f1f1fb;
 }
 .mwithdrawal_common {
@@ -399,7 +403,7 @@
 // 编辑店铺
 .delect {
   .van-dialog__header {
-    border-bottom: 1px solid #efefef; /*no*/ 
+    border-bottom: 1px solid #f2f2f2; /*no*/ 
     padding: 15px 0px;
     font-size: 18px;
   }
