--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -150,7 +150,7 @@
         font-size:14px; 
         color:#4597fb;
         padding:0 15px;
-        border-bottom:1px solid #EfEfEf /*no*/;
+        border-bottom:1px solid #f2f2f2 /*no*/;
         label{
             color:#4597fb;
         }
@@ -242,7 +242,7 @@ footer .van-tabbar-item span{
         justify-content: space-between;
         align-items: center;
         height:50px;
-        border-bottom: 1px solid #EfEfEf /*no*/;
+        border-bottom: 1px solid #f2f2f2 /*no*/;
         font-size:14px;
         color:#333333;
         overflow: hidden;
@@ -267,6 +267,6 @@ footer .van-tabbar-item span{
     .van-hairline--top-bottom{
         background:#ffffff !important;
         height:70px;
-        border-top:1px solid #EFEFEF;
+        border-top:1px solid #f2f2f2;
     }
 }
