--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -71,7 +71,7 @@
     border: none;
   }
   .van-search--show-action {
-    border-bottom: 1px solid #efefef;/*no*/ 
+    border-bottom: 1px solid #f2f2f2;/*no*/ 
   }
   .van-tab span {
     font-size:15px;
@@ -114,8 +114,8 @@
   }
   .van-tab:nth-child(3){
     span {
-      border-left: 1px solid #efefef;
-      border-right: 1px solid #efefef;
+      border-left: 1px solid #f2f2f2;
+      border-right: 1px solid#f2f2f2;
       display:inline;
       padding: 0px 40px;
     }
@@ -266,8 +266,8 @@
   }
   .van-tab:nth-child(3){
     span {
-      border-left: 1px solid #efefef;
-      border-right: 1px solid #efefef;
+      border-left: 1px solid #f2f2f2;
+      border-right: 1px solid #f2f2f2;
       display:inline;
       padding: 0px 30px;
     }
@@ -399,7 +399,7 @@
 // 编辑店铺
 .delect {
   .van-dialog__header {
-    border-bottom: 1px solid #efefef; /*no*/ 
+    border-bottom: 1px solid #f2f2f2; /*no*/ 
     padding: 15px 0px;
     font-size: 18px;
   }
