代码优化及有钱花动态入口

--- a/src/pages/shareShop/less/index.less
+++ b/src/pages/shareShop/less/index.less
@@ -169,11 +169,15 @@
     color:#ffffff;
     background:#4597FB;
     width:250px;
-    margin:0 18px 15px;
+    margin:0 35px 15px;
     border-radius: 20px;
     height:40px;
     line-height: 40px;
 }
+.dialogstyle .van-button--large{
+    margin:0 18px 15px;
+}
+
 //组件样式
 .optionstyle{
     padding:15px;
