提现封控样式

--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -443,3 +443,24 @@
   -webkit-transform-origin: left top;
   transform-origin: left top;
 }
+
+.password1111{
+  height: 350px;
+  background-color: transparent;
+  overflow: hidden;
+  .yidun_bgimg{
+    left: -30px !important;
+    top: 30px !important;
+    .yidun_bg-img{
+      width: 260px !important;
+    }
+  }
+  .yidun_jigsaw{
+    // left: 30px !important;
+    width: 45px !important;
+    height: 130px !important;
+  }
+  .yidun_control {
+    width: 260px;
+  }
+}
