--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -448,6 +448,7 @@
   height: 350px;
   background-color: transparent;
   overflow: hidden;
+  z-index: 1000 !important;
   .yidun_bgimg{
     left: -30px !important;
     top: 30px !important;
