--- a/src/pages/myShop/less/myshop.less
+++ b/src/pages/myShop/less/myshop.less
@@ -24,6 +24,33 @@
   }
 }
 
+// copy 样式
+.copyClass{
+  font-family:'PingFang SC';
+  font-weight:500;
+  font-size:13px;
+  .van-dialog__header{
+    color: #666;
+    width: 240px;
+    margin: 0 auto;
+    text-align: left;
+  }
+  .van-dialog__message--has-title{
+    width: 241px;
+    color: #000;
+    padding: 13px 22px 50px 11px;
+    margin: 0 auto;
+    background-color: #EFEFEF;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    text-align: left;
+  }
+  button:nth-child(1){
+    background-color: #fff;
+    border: 1px solid #4597FB;/*no*/
+    color: #4597FB;
+  }
+}
 // shopregister 页面
 
   [class*=van-hairline]::after {
@@ -112,12 +139,15 @@
   .van-pull-refresh{
     overflow: visible;
   }
+  .van-tab {
+    padding: 0px;
+  }
   .van-tab:nth-child(3){
     span {
       border-left: 1px solid #f2f2f2;
       border-right: 1px solid #f2f2f2;
       display:inline;
-      padding: 0px 40px;
+      padding: 0px 30px;
     }
   }
   .van-hairline--top-bottom::after {
@@ -127,6 +157,7 @@
     background-color: #4597FB;
     border-radius:2px;  
     height: 4px;
+    bottom: 19px;
   }
   .van_popup_text {
     width: 289px;
@@ -203,7 +234,6 @@
       }
       :nth-child(2){
         background-color: #4597FB;
-        
       }
     }
   }
@@ -244,6 +274,10 @@
 }
 // 我的订单
 .mshopapply_common {
+  .van-tabs--line .van-tabs__wrap{
+    height: 50px;
+    border-bottom: 0.8px solid #E7E7E7;/*no*/
+  }
   .van-tabs__wrap {
     position: fixed;
     top: 44px;
@@ -262,14 +296,18 @@
     overflow: visible;
   }
   .van-tab {
-    line-height: 44px;
+    line-height: 54px;
+  }
+  .van-tab:nth-child(2) {
+    padding: 0px;
   }
   .van-tab:nth-child(3){
+    padding: 0px;
     span {
-      border-left: 1px solid #f2f2f2;
-      border-right: 1px solid #f2f2f2;
+      width: 100%;
       display:inline;
-      padding: 0px 30px;
+      padding: 0px 64px 0px 65px;
+      border-left: 0.8px solid #E7E7E7;/*no*/
     }
   }
   .van-hairline--top-bottom::after {
@@ -278,7 +316,7 @@
   .van-tabs__line {
     background-color: #4597FB;
     border-radius:4px;
-    bottom: 20px;
+    bottom: 22px;
   }
   .van_popup_text {
     width: 279px;
@@ -413,7 +451,16 @@
     padding-top: 20px;
   }
 }
-
+.editshop_common {
+  .van-popup--top {
+    left: 50%;
+  }
+  .replace{
+    .van-dropdown-menu__title::after{
+      display: none;
+    }
+  }
+}
 // 分享引导页
 .yindaoshow{
   background-color: transparent;
@@ -425,7 +472,17 @@
     height: 270px;
   }
 }
-
+// copy分享引导页
+.conpyImg{
+  background-color: transparent;
+  width: 2789px;
+  height: 354px;
+  top: 45%;
+  img{
+    width: 289px;
+    height: 354px;
+  }
+}
 
 // border 伪类
 .scale:after{
@@ -463,5 +520,32 @@
   }
   .yidun_control {
     width: 260px;
+  }
+}
+
+// 店铺首页
+.myshop_common{
+  .van-nav-bar__text{
+    color: #333;
+    font-size:14px;
+  }
+  .van-icon-arrow-left:before{
+    display: none;
+  }
+  .van-nav-bar__text:nth-child(2){
+    font-size:14px;
+    text-align: left;
+    color: #4597FB;
+    padding-left: 5px;
+  }
+  .van-nav-bar__right{
+    margin-bottom: -2px;
+  }
+}
+
+// 图片边角
+.common_img{
+  img {
+    border-radius: 5px;
   }
 }
